tests/bad_reserved_name_param.stderr
tests/bad_reserved_name_param.sl:8:16: error: identifier prefix '__sl_' is reserved
